--- a/web/index.html
+++ b/web/index.html
@@ -223,7 +223,7 @@
                         </div>
                         <div class="reveal" id="open-mapa" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
                             <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122829,-46.5546217,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a812ed13:0x6da17955b6c2899f!8m2!3d-23.1228339!4d-46.552433" target="_blank">
-                                <p>Click para poder visualizar no Google Maps</p>
+                                <p> Google Maps</p>
                                 <img src="/images/mapa.jpg">
                             </a>
                             <button class="close-button" data-close aria-label="Close reveal" type="button">
