--- a/web/index.html
+++ b/web/index.html
@@ -81,14 +81,14 @@
                 <h2>Quem somos</h2>
 
                 <div class="grid-x">
-                    <div class="cell large-auto">
+                    <div class="cell small-6">
                         <a data-toggle="open-text">
-                            <img src="http://via.placeholder.com/560x400">
+                            <img src="http://via.placeholder.com/500x250">
                         </a>
                     </div>
-                    <div class="cell large-auto">
+                    <div class="cell small-6">
                         <a data-toggle="open-text">
-                            <img src="http://via.placeholder.com/560x400">
+                            <img src="http://via.placeholder.com/500x250">
                         </a>
                     </div>
                 </div>
