--- a/web/index.html
+++ b/web/index.html
@@ -92,8 +92,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="reveal" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-                    <div class=" small-12 medium-4 medium-offset-4 cell text-center">
+                <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+                    <div class="small-12 medium-offset-12 cell text-center">
                         <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
                             em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta a
                             sexta-feira das xx ás xx na região de Atibia. </p>
