--- a/web/index.html
+++ b/web/index.html
@@ -93,22 +93,27 @@
                     </div>
                 </div>
                 <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-                    <div class="small-12 medium-offset-12 cell text-center">
-                        <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
-                            em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta a
-                            sexta-feira das xx ás xx na região de Atibia. </p>
-                        <p>
-                            Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
-                            no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades e que
-                            todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta acompanhando
-                            as atividades do dia.
-                        </p>
+                    <div class="grid-x">
+                        <div class="small-12 medium-4 cell">
+                            <h4>TV Cultura</h4>
+                        </div>
+                        <div class="small-12 medium-8 cell">
+                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
+                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta
+                                a sexta-feira das xx ás xx na região de Atibia. </p>
+                            <p>
+                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
+                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades
+                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta
+                                acompanhando as atividades do dia.
+                            </p>
 
-                        <p>
-                            O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
-                            desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos neste
-                            objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
-                        </p>
+                            <p>
+                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
+                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos
+                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
+                            </p>
+                        </div>
                     </div>
                     <button class="close-button" data-close aria-label="Close reveal" type="button">
                         <span aria-hidden="true">&times;</span>
