--- a/web/index.html
+++ b/web/index.html
@@ -81,12 +81,12 @@
                 <h2>Quem somos</h2>
 
                 <div class="grid-x">
-                    <div class="cell small-6">
+                    <div class="cell small-12 medium-6">
                         <a data-toggle="open-text">
                             <img src="http://via.placeholder.com/500x250">
                         </a>
                     </div>
-                    <div class="cell small-6">
+                    <div class="cell small-12 medium-6">
                         <a data-toggle="open-text">
                             <img src="http://via.placeholder.com/500x250">
                         </a>
@@ -124,7 +124,7 @@
         <div class="white-content" id="seja-um-doador">
             <div class="grid-container">
                 <div class="grid-x">
-                    <div class="small-12 medium-6 cell text-center">
+                    <div class="small-12 medium-12 large-6 cell text-center">
                         <h2>Sócio amigo</h2>
                     </div>
                 </div>
@@ -248,9 +248,6 @@
                 </div>
             </div>
         </div>
-
-    </div>
-    </div>
     </div>
 
     <!-- FOOTER -->
@@ -283,7 +280,7 @@
                 </div>
             </div>
             <div class="grid-x info">
-                <div class="small-6 cell">
+                <div class="small-12 cell">
                     <p>Desenvolvido com carinho por Victor Fontana</p>
                 </div>
             </div>
