--- a/web/index.html
+++ b/web/index.html
@@ -136,8 +136,8 @@
                     </div>
                 </div>
                 <div class="grid-x">
-                    <div class="small-8 medium-8 cell hide-for-small-only"></div>
-                    <div class="small-12 medium-4 cell text-center">
+                    <div class="small-8 medium-4 large-8 cell hide-for-small-only"></div>
+                    <div class="small-12 medium-12 large-4 cell text-center">
                         <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades, realizar
                             manutenção e para o desenvolvimento de novos projetos para nossa Associação.
                         </p>
