--- a/web/index.html
+++ b/web/index.html
@@ -81,7 +81,7 @@
                 <h2>Quem somos</h2>
 
                 <div class="grid-x">
-                    <div class="cell small-12 medium-6">
+                    <div class="cell small-12 medium-6 responsive-bottom-space">
                         <a data-toggle="open-text">
                             <img src="http://via.placeholder.com/500x250">
                         </a>
@@ -225,7 +225,7 @@
                                     <span lang="en">cep</span>
                                 </td>
                                 <td>
-                                    <a class="link" href="">12942-110</a>
+                                    <a class="link" href="">12345-678</a>
                                 </td>
                             </tr>
                             <tr>
@@ -240,7 +240,7 @@
                     </table>
                 </div>
 
-                <div class="small-12 medium-6 cell">
+                <div class="small-12 medium-6 cell hide-for-small-only">
                     <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122829,-46.5546217,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a812ed13:0x6da17955b6c2899f!8m2!3d-23.1228339!4d-46.552433"
                         target="_blank">
                         <img src="/images/mapa.png">
@@ -253,7 +253,7 @@
     <!-- FOOTER -->
     <div class="footer">
         <div class="grid-container">
-            <div class="grid-x">
+            <div class="grid-x hide-for-small-only">
                 <div class="small-6 cell">
                     <h6>Sobre nós</h6>
                 </div>
@@ -261,7 +261,7 @@
                     <h6>Contato</h6>
                 </div>
             </div>
-            <div class="grid-x">
+            <div class="grid-x hide-for-small-only">
                 <div class="small-6 cell">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </br>
                         In eu sagittis felis. Etiam ante dui, iaculis vel augue et, gravida blandit nunc.</p>
@@ -281,7 +281,7 @@
             </div>
             <div class="grid-x info">
                 <div class="small-12 cell">
-                    <p>Desenvolvido com carinho por Victor Fontana</p>
+                    <p>Desenvolvido com carinho por <a href="http://www.victorfontana.com.br">Victor Fontana</a></p>
                 </div>
             </div>
         </div>
