--- a/web/layout.html
+++ b/web/layout.html
@@ -7,23 +7,30 @@
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="/css/app.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet" async>
+    <style>
+        header {
+            background-color: #ffd98f;
+        }
+    </style>
 </head>
 
 <body>
-    <header class="navbar grid-x grid-container" data-role="navigation">
-        <div>
-            <h1>
-                <a href="/">
-                    <img src="http://via.placeholder.com/250x150" alt="Logo Novo Rumo">
-                </a>
-            </h1>
-        </div>
-        <div>
-            <!-- Progresso -->
+    <header data-role="navigation">
+        <div class="grid-container">
+            <div class="small-3">
+                <h1>
+                    <a href="/">
+                        <img src="http://via.placeholder.com/200x100" alt="Logo Novo Rumo">
+                    </a>
+                </h1>
+            </div>
+            <div class="small-9">
+                <!-- Progresso -->
+            </div>
         </div>
     </header>
 
-    <main class="">
+    <main class="grid-x">
         <!-- RenderPage -->
     </main>
 
